# Bet-That

./: .coverage  .cursorrule  .flake8  .gitignore  .pre-commit-config.yaml  =1.5  BETS_TO_PLACE.md  BROWSER_TEST_PLAN.md  BetThat  CODE_QUALITY_COMPLETION_REPORT.md  COMMANDS.md  DATABASE_MODELS.md  DEPLOYMENT.md  ENHANCED_MODELS_SUMMARY.md  IMPLEMENTATION_PLAN.md  JWT_AUTHENTICATION_COMPLETION_REPORT.md  JWT_AUTHENTICATION_IMPLEMENTATION.md  LICENSE  Makefile  QUALITY_AUDIT_REPORT.md  README.md  REALTIME_UPDATES_README.md  RESOLUTION_ANALYTICS_IMPLEMENTATION.md  TESTING_STRATEGY.md  TEST_FIX_LOG.md  alembic.ini  beta_readiness_report.md  docker-compose.api.yml  docker-compose.yml  env.api.example  env.api.jwt.example  fix_all_issues.py  package-lock.json  pyproject.toml  pytest.ini  requirements-api.txt  requirements-dev.txt  requirements.txt  run_bet_resolution_tests.py  run_command.py  (+3 more)
adapters/: injuries.py  news_flags.py  nflverse_provider.py  stats_provider.py  weather.py  weather_provider.py  wr_cb_public.py
alembic/: env.py
api/: .env.api  Dockerfile  __init__.py  database.py  deps.py  errors.py  main.py  models.py  schemas.py  settings.py
app/: debug_panel.py  streamlit_app.py  ui_badges.py  why_empty.py
backend/: .env.example  README.md  requirements.txt
commands/: __init__.py  base.py  bugfix_with_test.py  check_ingestion_contract.py  enhance_empty_state.py
config/: .env.example  flags.py  report_weekly.yml  risk.yml  signal_flags.manual.yaml
db/: migrate.py  migrate_enhanced.py  schema.sql  schema_enhanced.sql
engine/: calibration.py  distributions.py  edge_engine.py  edge_engine_backup.py  edge_engine_fixed.py  line_shop.py  odds_math.py  odds_normalizer.py  portfolio.py  scheme.py  season.py  shrinkage.py  steam_detector.py  team_map.py  week_populator.py  week_populator_backup.py  week_populator_fixed.py
examples/: jwt_auth_example.py
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts  vitest.setup.ts
jobs/: backtest.py  build_defense_ratings.py  build_matchup_context.py  compute_clv.py  compute_edges.py  examples.cron.md  export_bi.py  import_odds_from_api.py  import_odds_from_csv.py  migrate_weather_schema.py  poll_odds.py  poll_odds_backup.py  poll_odds_enhanced.py  report_weekly.py
migrations/: 001_add_user_tables.sql  001_season_backfill_and_indexes.sql  002_add_jwt_auth_fields.sql  002_create_enhanced_user_models.sql  003_add_username_and_registration_fields.sql  run_migration.py
models/: qb_projection.py
project-analysis/: bet-that_repo_analysis.md
r/: eda_qb_model.R
schemas/: __init__.py  odds_schemas.py  odds_schemas.py.bak
scripts/: auto_commit.py  betthat.sh  check-makefile.sh  ci-sanity.sh  commit-validation.sh  fix-makefile.py  init_enhanced_db.py  lint_streamlit.sh  setup-dev-environment.sh  smoke_seed_2025.py  test_api_client.py  validate_models.py
storage/: odds.db-shm  odds.db-wal  player_flags.yaml  sample_odds_api_response.json  sample_odds_qb_yards.csv
tasks/: todo.md
tests/: smoke_season.py  test_2025_data_pipeline.py  test_2025_edges_integration.py  test_best_priced.py  test_bet_resolution.py  test_bet_resolution_e2e.py  test_bet_resolution_errors.py  test_bet_resolution_integration.py  test_bet_resolution_realtime.py  test_calibration.py  test_clv_math.py  test_context_ingestion.py  test_debug_panel.py  test_dedupe.py  test_defense_artifacts.py  test_distributions.py  test_edge_engine_positions.py  test_edge_key_population.py  test_engine_defjoin.py  test_flags_merge.py  test_freshness_controls.py  test_futurewarnings_clean.py  test_importer_integrity.py  test_key_rotation.py  test_line_shopping_expander.py  test_market_completeness.py  test_market_integrity.py  test_odds_math.py  test_poll_once.py  (+19 more)
(+224 files in other folders)
